 * moved regex_t stuff into sg_regex typedef
 * added extra error checking
 * formatting updates
 * actually call regfree() for all regex_t
 * introduced a DO_NOT_UNLINK_BAD_FILES macro within include/main.h
 * changed malloc back to calloc (src/package.c, line 423)
 * initial support for PACKAGE REQUIRED: data in PACKAGES.TXT
   this also means we can support LINUXPACKAGES as MIRROR

0.9.5c Oct 04, 2003
 * removed bad free() in get_installed_pkgs()

0.9.5b Oct 02, 2003
 * yet another improvement to pkg version checking, xspace pointed
   out another example of how pkg versions might slip through cmp routine.

0.9.5 Oct 01, 2003
 * fixed pkg name so that slack-desc shows up... wasn't following
   new package naming convention.  Thanks Luke Yelavich <luke@audioslack.com>
 * bug fix... replaced strcmp with cmp_pkg_versions(char *,char *);
   now greater pkg versions are always correctly returned
   Thanks to xspace <xspace@digitalhigh.de>

0.9.4 Sep 29, 2003
 * downloads CHECKSUMS.md5 from mirror
 * md5 sum's each package after downloading (from CHECKSUMS.md5 data)
   utilizing openssl/evp.h
 * pre-download check... won't download twice if md5sum is good
 * error checking updates
 * more verbose messages during operation
 * fixed chdir/mkdir bug in working_dir
 * unlink faulty d/l files/pkgs (failed to d/l or checksum is bad)
 * fixed bug with ftp transfers... connections left open
   some ftp servers complain and deny access after so many connections
 * doc updates
 * install make target now creates /var/slapt-get

0.9.3 Sep 24, 2003
 * default make target doesn't build slack pkg
 * --dist-upgrade becomes target instead of option
 * merged dist-upgrade into --upgrade, --install also
   checks if available pkg is newer than installed
   dist-upgrade removed.
 * Added a FAQ to documentation
 * added error notification when commands fail

0.9.2 Sep 22, 2003
 * renamed to slapt-get
 * documentation updates

0.9 Sep 17, 2003
 * --re-install is now --reinstall