@@ -35,6 +35,7 @@ struct _configuration {
 	int re_install;
 	struct exclude_list *exclude_list;
 	int ignore_excludes;
+	int no_md5_check;
 };
 typedef struct _configuration rc_config;
 
